fixed styling on contact page and bug re: header nav bar not showing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.contact-container {
+/* .contact-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,10 +12,37 @@
     width: 100%;
     max-width: 600px;
     /* Adjust max-width as needed */
+/* } */
+
+/* .inquiry {
+    text-align: center;
+} */ 
+
+.center-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
 }
 
-.inquiry {
-    text-align: center;
+.contact-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 50px;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
+
+.contact-image {
+    flex-basis: 50%;
+}
+
+.contact-form {
+    flex-basis: 50%;
 }
 
 /* Media query for smaller screens */
